syntax = "proto3";

option csharp_namespace = "GrpcCustomerService";

package customer;

// The greeting service definition.
service CustomerService {
 rpc GetAll (Empty) returns (CustomerList) {}
 rpc Get (CustomerId) returns (Customer) {}
 rpc Insert (Customer) returns (Empty) {}
 rpc Update (Customer) returns (Customer) {}
 rpc Delete (CustomerId) returns (Empty) {}
}
message Empty {}
message Customer {
 int32 customerId = 1;
 string name = 2;
 string adress = 3;
 string birthdate = 4;
}
message CustomerList {
 repeated Customer item = 1;
}
message CustomerId {
 int32 id = 1;
}
